fixed arrow not showing up on Edge

--- a/styles/main.css
+++ b/styles/main.css
@@ -220,7 +220,7 @@ p {
     display: inline-block;
     background: #FC0233;
     color: #EDF4F4;
-    padding: 8px 52px 8px 32px;
+    padding: 8px 58px 8px 32px;
     border: 0;
     cursor: pointer;
     font-size: 17px;
@@ -239,13 +239,18 @@ p {
 
 .bauhaus-button::before {
     display: block;
-    width: 20px;
-    content: '🡪';
+    width: 26px;
+    background: url('../images/arrow_forward.png');
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    content: '';
     font-size: 21px;
     text-align: center;
     position: absolute;
+    top: 4px;
     right: 4px;
-    color: #000000;
+    bottom: 4px;
     opacity: 0.27;
 }
 
